--- a/Pipfile
+++ b/Pipfile
@@ -1,23 +1,30 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-django = "*"
-djangorestframework = "*"
-gunicorn = "*"
-dj-database-url = "*"
-psycopg2-binary = "*"
-django-crispy-forms = "*"
-django-email-users = "*"
-unidecode = "*"
-importlib = "*"
-whitenoise = "==5.0.1"
-base = "*"
-utils = "*"
 
 [dev-packages]
+
+[packages]
+asgiref = "==3.2.7"
+dj-database-url = "==0.5.0"
+django-crispy-forms = "==1.9.0"
+django-extensions = "==2.2.8"
+django-phonenumber-field = "==4.0.0"
+djangorestframework = "==3.11.0"
+gunicorn = "==20.0.4"
+importlib = "==1.0.4"
+phonenumbers = "==8.12.1"
+psycopg2-binary = "==2.8.4"
+pytz = "==2019.3"
+six = "==1.14.0"
+sqlparse = "==0.3.1"
+utils = "==1.0.1"
+whitenoise = "==5.0.1"
+Babel = "==2.8.0"
+Django = "==3.0.4"
+Unidecode = "==1.1.1"
+Werkzeug = "==1.0.0"
 
 [requires]
 python_version = "3.6"
