--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ Babel = "==2.8.0"
 Django = "==3.0.4"
 Unidecode = "==1.1.1"
 Werkzeug = "==1.0.0"
+django-localflavor = "*"
 
 [requires]
 python_version = "3.6"
