--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ Django = "==3.0.4"
 Unidecode = "==1.1.1"
 Werkzeug = "==1.0.0"
 django-localflavor = "*"
+codicefiscale = "*"
 
 [requires]
-python_version = "3.6"
+python_version = ">=3.6"
