--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
