--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
+    "sweet-modal-vue": "^2.0.0",
     "vue": "^2.6.11",
     "vue-custom-scrollbar": "^1.2.0",
     "vue-picture-input": "^2.1.6",
