--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-cookie-law": "^1.13.3",
     "vue-custom-scrollbar": "^1.2.0",
+    "vue-multiselect": "^2.1.6",
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
