--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ public/static/*
 **/migrations/**
 !**/migrations
 !**/migrations/__init__.py
+
+**/**/migrations/**
+!**/**/migrations
+!**/**/migrations/__init__.py
+
 src-copy
 __pycache__
 Pipfile
