--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "x5-gmaps": "^0.3.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
