--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,19 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-
+            
+      - run:
+          name: Database Makemigrations
+          command: |
+            . venv/bin/activate
+            python3 manage.py makemigrations
+            
+      - run:
+          name: Database Migrate
+          command: |
+            . venv/bin/activate
+            python3 manage.py migrate
+            
       - run:
           name: Execute tests
           command: |
