--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,3 +44,8 @@ workflows:
     # Run the welcome/run job in its own container
       jobs:
         - test-backend
+        
+general:
+  branches:
+    only:
+     - deploy  # list of branches to build     
