--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,7 @@ version: 2.1
 jobs:
 
   test-backend:
-    filters:
-      branches:
-        only:
-          - deploy
+    
     docker:
       - image: circleci/python:3.8
     working_directory: ~/marette_backend
@@ -46,5 +43,9 @@ workflows:
     main:
     # Run the welcome/run job in its own container
       jobs:
-        - test-backend
+        - test-backend:
+            filters:
+              branches:
+                only:
+                  - deploy
          
