--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+orbs:
+  aws-code-deploy: circleci/aws-code-deploy@x.y
+
 version: 2.1
 jobs:
 
@@ -48,4 +51,10 @@ workflows:
               branches:
                 only:
                   - deploy
+        - aws-code-deploy/deploy:
+            application-name: marette-deploy
+            bundle-bucket: marette-deploy
+            bundle-key: AKIAJDRGKF7NTVMKTTXA
+            deployment-group: main-deploy-group
+            service-role-arn: arn:aws:iam::685988842947:role/Deployer
          
