--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 orbs:
-  aws-code-deploy: circleci/aws-code-deploy@x.y
+  aws-code-deploy: circleci/aws-code-deploy@1.0.1
 
 version: 2.1
 jobs:
