--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,7 @@ os: linux
 files:
  - source: \
     destination: /home/marette/marette_backend
+hooks:
+   BeforeInstall:
+     - location: scripts/unzipBundle.sh
+       timeout: 300
