--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,9 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /*
     destination: /home/marette/marette_backend/
 hooks:
   BeforeInstall:
     - location: scripts/unzipBundle.sh
       timeout: 300
-      runas: marette
