--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,9 @@ files:
   - source: /
     destination: /home/marette/marette_backend/
 hooks:
+  BeforeInstall:
+    - location: scripts/purge.sh
+      timeout: 300
   AfterInstall:
     - location: scripts/unzipBundle.sh
       timeout: 300
