--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,9 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-
+staging_only: &staging_only
+  filters:
+    branches:
+      only: deploy
+
 orbs:
   aws-code-deploy: circleci/aws-code-deploy@1.0.1
 
@@ -47,11 +52,10 @@ workflows:
     # Run the welcome/run job in its own container
       jobs:
         - test-backend:
-            filters:
-              branches:
-                only:
-                  - deploy
+            <<: *staging_only
+            
         - aws-code-deploy/deploy:
+            <<: *staging_only
             application-name: marette-deploy
             bundle-bucket: marette-deploy
             bundle-key: v2
